<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="ST_ManipAxis" Id="{8a2b69b2-0749-42c2-bd32-ad09794455d6}">
    <Declaration><![CDATA[TYPE ST_ManipAxis :
STRUCT

(* Controls *)
xEnable	:	BOOL;
rReqAbsPos	:	REAL;
rReqRelPos	:	REAL;
xStart	:	BOOL;
xStop	:	BOOL;
wMode	:	E_AxisMoveMode;
	
(* Axis motor *)
stAxis	:	AXIS_REF;
lrVelocity	:	LREAL	:=20; //mm/min

eState	:	E_AxisMotionState;

xHiLS	AT %I* :	BOOL;
xLoLS	AT %I* :	BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>