<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_PropValveMKS253" Id="{73adc046-3cee-44d4-b7f7-e0e8dc3c838f}">
    <Declaration><![CDATA[TYPE ST_PropValveMKS253 :
STRUCT
	
	stAxis 	: AXIS_REF;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>